--- a/libraries/pom.xml
+++ b/libraries/pom.xml
@@ -82,6 +82,9 @@
         <module>tools/kotlin-reflect</module>
         <module>tools/kotlin-osgi-bundle</module>
 
+        <module>tools/maven-archetypes/kotlin-archetype</module>
+        <module>tools/maven-archetypes/kotlin-archetype-hybrid</module>
+
         <!--NB! kotlin-js-library should be built before kotlin-gradle-plugin-->
         <!--because it is used in tests but cannot be added as test-dependency-->
         <!--(kotlin-gradle-plugin module will be recognized as kotlin-js module)-->
