--- a/libraries/stdlib/pom.xml
+++ b/libraries/stdlib/pom.xml
@@ -50,6 +50,12 @@
                         <goals>
                             <goal>compile</goal>
                         </goals>
+                        <configuration>
+                            <args combine.children="append">
+                                <arg>-Xdump-declarations-to</arg>
+                                <arg>${basedir}/target/stdlib-declarations.json</arg>
+                            </args>
+                        </configuration>
                     </execution>
 
                     <execution>
