--- a/libraries/tools/runtime/pom.xml
+++ b/libraries/tools/runtime/pom.xml
@@ -103,6 +103,12 @@
                         <goals>
                             <goal>compile</goal>
                         </goals>
+                        <configuration>
+                            <args combine.children="append">
+                                <arg>-Xdump-declarations-to</arg>
+                                <arg>${basedir}/target/runtime-declarations.json</arg>
+                            </args>
+                        </configuration>
                     </execution>
                 </executions>
             </plugin>
