--- a/libraries/pom.xml
+++ b/libraries/pom.xml
@@ -82,8 +82,7 @@
         <module>tools/kotlin-reflect</module>
         <module>tools/kotlin-osgi-bundle</module>
 
-        <module>tools/maven-archetypes/kotlin-archetype</module>
-        <module>tools/maven-archetypes/kotlin-archetype-hybrid</module>
+        <module>tools/maven-archetypes</module>
 
         <!--NB! kotlin-js-library should be built before kotlin-gradle-plugin-->
         <!--because it is used in tests but cannot be added as test-dependency-->
