--- a/idea/testData/configuration/maven/fixExisting/pom.xml
+++ b/idea/testData/configuration/maven/fixExisting/pom.xml
@@ -7,51 +7,30 @@
     <groupId>maventest</groupId>
     <artifactId>maventest</artifactId>
     <version>1.0-SNAPSHOT</version>
-
     <properties>
-        <kotlin.version>$VERSION$</kotlin.version>
+        <kotlin.version>wrong-kotlin-version</kotlin.version>
     </properties>
-
     <dependencies>
         <dependency>
             <groupId>org.jetbrains.kotlin</groupId>
             <artifactId>kotlin-stdlib</artifactId>
-            <version>${kotlin.version}</version>
-        </dependency>
-        <dependency>
-            <groupId>org.jetbrains.kotlin</groupId>
-            <artifactId>kotlin-test-junit</artifactId>
-            <version>${kotlin.version}</version>
-            <scope>test</scope>
-        </dependency>
-        <dependency>
-            <groupId>junit</groupId>
-            <artifactId>junit</artifactId>
-            <version>4.12</version>
-            <scope>test</scope>
+            <version>wrong-version</version>
         </dependency>
     </dependencies>
 
     <build>
-        <sourceDirectory></sourceDirectory>
+        <sourceDirectory>wrong-source-dir</sourceDirectory>
         <plugins>
             <plugin>
                 <groupId>org.jetbrains.kotlin</groupId>
                 <artifactId>kotlin-maven-plugin</artifactId>
-                <version>${kotlin.version}</version>
+                <version>wrong-plugin-version</version>
                 <executions>
                     <execution>
                         <id>compile</id>
                         <phase>compile</phase>
                         <goals>
-                            <goal>compile</goal>
-                        </goals>
-                    </execution>
-                    <execution>
-                        <id>test-compile</id>
-                        <phase>test-compile</phase>
-                        <goals>
-                            <goal>test-compile</goal>
+                            <goal>wrong-goal</goal>
                         </goals>
                     </execution>
                 </executions>
