--- a/libraries/tools/binary-compatibility-validator/pom.xml
+++ b/libraries/tools/binary-compatibility-validator/pom.xml
@@ -22,6 +22,12 @@
             <version>${project.version}</version>
         </dependency>
         <dependency>
+            <groupId>org.jetbrains.kotlin</groupId>
+            <artifactId>kotlin-test-junit</artifactId>
+            <version>${project.version}</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
             <groupId>org.ow2.asm</groupId>
             <artifactId>asm-debug-all</artifactId>
             <version>5.0.4</version>
@@ -56,6 +62,12 @@
                         <goals>
                             <goal>test-compile</goal>
                         </goals>
+                        <configuration>
+                            <args combine.children="append">
+                                <arg>-Xdump-declarations-to</arg>
+                                <arg>${basedir}/target/cases-declarations.json</arg>
+                            </args>
+                        </configuration>
                     </execution>
                 </executions>
             </plugin>
